--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jquery"
   ],
   "dependencies": {
-    "jquery": ">=1.7.2 <3.0.0"
+    "jquery": ">=1.7.2"
   },
   "license": "MIT",
   "devDependencies": {
